--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                         </button></div></div>
                         <div id="ctwInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                                         <path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-                                </svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targaryen Warlord items. This is more material-efficient as these items are cheaper to produce.<br><br>
-                        <b>Only for Level 20</b>: Level 20 templates will exclusively use Ceremonial Targaryen Warlord items, ensuring the CTW set is crafted even when other warlord options are unavailable.<br><br>
+                               </svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targaryen Warlord items. This is more material-efficient as these items are cheaper to produce.<br><br>
+                        <b>Only for Level 20</b>: Level 20 templates will exclusively use Ceremonial Targaryen Warlord items, ensuring the Ceremonial Targaryen Warlord set is crafted even when other warlord options are unavailable.<br><br>
                         <b>Use when needed</b>: Ceremonial Targaryen Warlord items can be used at any level when material constraints make it beneficial. This does not force their use, but allows it as needed.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
@@ -260,7 +260,7 @@
                         </button></div></div>
                         <div id="oddsInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                                         <path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-                               </svg></button><p><b>Odds</b>: Items are grouped into three tiers. Normal odds are always active, while medium and low odds can be toggled on or off. Odds apply to Season 0 and Ceremonial Targaryen Warlord items at levels 15, 20, 25, and 35. Season 1 and Season 2 items are affected only at level 20.</p></div></div>
+                               </svg></button><p><b>Odds</b>: Items are grouped into three tiers. Normal odds stay active, while medium and low odds can be toggled on or off. Season 0 gear and Ceremonial Targaryen Warlord pieces respond to these toggles wherever odds apply (level 20 CTW requires the medium toggle), while Season 1 and Season 2 gear only react at level 20.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
                                 <input type="checkbox" id="includeLowOdds">
@@ -289,7 +289,7 @@
                                     <button class="close-popup" aria-label="Close">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"/></svg>
                                     </button>
-                                    <p>Adjust how strongly Season 0 items are prioritized. Off excludes them, Low slightly reduces their priority, Normal keeps the default weighting, and High strongly prefers Season 0 while lowering the priority of other seasons.</p>
+                                    <p>Use the slider to adjust how much the calculator favours Season 0 gear. Off removes Season 0 items entirely, Low slightly prioritises other seasons, Normal keeps the default balance, and High gives Season 0 an even stronger preference.</p>
                                 </div>
                             </div>
                             <div class="season-zero-slider">
