--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </button></div></div>
                         <div id="oddsInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                                         <path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-                               </svg></button><p><b>Odds</b>: Items are grouped into three tiers. Normal odds stay active, while medium and low odds can be toggled on or off. Season 0 items are affected at levels 15, 20, 25, and 35. Ceremonial Targaryen Warlord items follow the same levels, except level 20 is only available when medium odds are enabled. Season 1 and Season 2 items are affected only at level 20.</p></div></div>
+                               </svg></button><p><b>Odds</b>: Items are grouped into three tiers. Normal odds stay active, while medium and low odds can be toggled on or off. Season 0 gear and Ceremonial Targaryen Warlord pieces respond to these toggles wherever odds apply (level 20 CTW requires the medium toggle), while Season 1 and Season 2 gear only react at level 20.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
                                 <input type="checkbox" id="includeLowOdds">
@@ -372,3 +372,4 @@
 	</footer>
 </body>
 </html>
+
