--- a/index.html
+++ b/index.html
@@ -39,9 +39,30 @@
 </head>
 <body>
     <div class="wrapper">
-		<!-- Materiaalien valinta -->
-		
-		<div id="generatebychoice">
+                <div class="update-log-trigger">
+                        <button id="openUpdateLog" type="button" aria-label="View the latest updates" aria-haspopup="dialog" aria-expanded="false">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 64C0 46.3 14.3 32 32 32H352c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64zM0 192c0-17.7 14.3-32 32-32H352c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 224 0 209.7 0 192zM384 320c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H352c17.7 0 32 14.3 32 32zM464 96c26.5 0 48-21.5 48-48S490.5 0 464 0s-48 21.5-48 48s21.5 48 48 48zM464 224c26.5 0 48-21.5 48-48S490.5 128 464 128s-48 21.5-48 48s21.5 48 48 48zM464 352c26.5 0 48-21.5 48-48s-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48z"/></svg>
+                        </button>
+                </div>
+                <div id="updateLogOverlay" class="info-overlay changelog-overlay" role="dialog" aria-modal="true" aria-labelledby="updateLogTitle" aria-hidden="true">
+                        <div class="info-content changelog-content">
+                                <button class="close-popup" type="button" aria-label="Close update log">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"/></svg>
+                                </button>
+                                <h2 id="updateLogTitle">What&rsquo;s new &ndash; 05/14/2024</h2>
+                                <p>We&rsquo;ve bundled the latest round of improvements to make planning your crafting runs smoother than ever.</p>
+                                <ul>
+                                        <li><strong>Levels 30&ndash;45 coverage:</strong> You can now prepare high-level templates without leaving the calculator, making late-game planning effortless.</li>
+                                        <li><strong>Season 0 weighting control:</strong> Choose how much influence Season 0 items have in the recommendations with an intuitive slider.</li>
+                                        <li><strong>Smarter, faster math:</strong> Behind-the-scenes calculation optimizations mean quicker results, even for large inventories.</li>
+                                        <li><strong>Refined interface:</strong> Layout and styling tweaks improve readability and keep important actions within easy reach.</li>
+                                </ul>
+                                <p class="changelog-footer">You can revisit these notes any time from the update icon in the top corner.</p>
+                        </div>
+                </div>
+                <!-- Materiaalien valinta -->
+
+                <div id="generatebychoice">
 			<div class="donate-header">
 				<button id="openGiftFromHeader">
 					<span>Support this project</span>
