Remove low-odds fallback and refresh changelog

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                                 <ul>
                                         <li><strong>Levels 30&ndash;45 coverage:</strong> You can now prepare high-level templates without leaving the calculator, making late-game planning effortless.</li>
                                         <li><strong>Season 0 weighting control:</strong> Choose how much influence Season 0 items have in the recommendations with an intuitive slider.</li>
-                                        <li><strong>Smarter, faster math:</strong> Behind-the-scenes calculation optimizations mean quicker results, even for large inventories.</li>
-                                        <li><strong>Refined interface:</strong> Layout and styling tweaks improve readability and keep important actions within easy reach.</li>
+                                        <li><strong>Enhanced calculation algorithm:</strong> Behind-the-scenes logic improvements make the planner handle the expanded dataset more reliably.</li>
                                 </ul>
                         </div>
                 </div>
