--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="style.css?v=1.115">
 	<script src="seasons/season0.js"></script>
 	<script src="seasons/season1.js"></script>
-	<script src="seasons/season2.js"></script>
-	<script src="seasons/season3.js"></script>
-	<script src="seasons/season4.js"></script>
+        <script src="seasons/season2.js"></script>
+        <script src="seasons/season3.js"></script>
+        <script src="seasons/seasonctw.js"></script>
+        <script src="seasons/season4.js"></script>
 	<script src="seasons/season5.js"></script>
 	<script src="seasons/season6.js"></script>
 	<script src="seasons/season7.js"></script>
