--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                                 <div id="changelog-panel-2025-06-10" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-06-10">
                                                         <ul>
                                                                 <li><strong>Frostfang Thenn items:</strong> Added the full equipment lineup to planning calculations.</li>
-                                                                <li><strong>Level 40 refinements:</strong> Medium items are now excluded from calculations unless explicitly selected.</li>
+                                                                <li><strong>Level 40 fixed:</strong> Medium items are now excluded from calculations unless explicitly selected.</li>
                                                         </ul>
                                                 </div>
                                         </div>
@@ -414,6 +414,7 @@
 	</footer>
 </body>
 </html>
+
 
 
 
