--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         </div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
-                                <input type="checkbox" id="level20OnlyWarlords" checked>
+                                <input type="checkbox" id="level20OnlyWarlords">
                                 <svg><use xlink:href="#checkbox-30"></use></svg>
                             </span>
                             <label for="level20OnlyWarlords">Only for Level 20</label>
@@ -414,6 +414,7 @@
 	</footer>
 </body>
 </html>
+
 
 
 
