--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 	<meta property="og:site_name" content="Crafting calculator">
 	<link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css?v=1.117">
-	<script src="seasons/season0.js"></script>
+        <script>
+                (function () {
+                        const params = new URLSearchParams(window.location.search);
+                        if (params.get('debug') !== 'true') {
+                                const noop = () => {};
+                                console.log = noop;
+                        }
+                })();
+        </script>
+        <script src="seasons/season0.js"></script>
 	<script src="seasons/season1.js"></script>
         <script src="seasons/season2.js"></script>
         <script src="seasons/season3.js"></script>
