--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                                 </button>
                                                 <div id="changelog-panel-2025-10-22" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-10-22">
                                                         <ul>
-                                                                <li><strong>Faster calculations:</strong> The computation pipeline is streamlined so results appear more quickly.</li>
+                                                                <li><strong>Faster and improved calculations:</strong> The computation pipeline has been optimized, producing more accurate results significantly faster.</li>
                                                                 <li><strong>Save your work:</strong> Added the option to store the current calculation locally for easy continuation later.</li>
                                                         </ul>
                                                 </div>
@@ -435,11 +435,3 @@
 	</footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
